Added actions and user dashboard.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>React Redux Simple App</title>
+    <script type="text/javascript" src="http://underscorejs.org/underscore-min.js"></script>
 </head>
 <body>
     <div id="app"></div>
